--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 		</section>
 
 		<section class="about-shelter">
-			<div class="about-shelter__img" style="background-image: url(images/about-pets.png);"></div>
+			<div class="about-shelter__wrap">
+				<div class="about-shelter__img" style="background-image: url(images/about-pets.png);"></div>
+			</div>
 			<div class="about-shelter__info">
 				<h3>About the shelter “Cozy House”</h3>
 
