feat: add OUR FRIENDS section

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Cozy House</title>
 	<link rel="stylesheet" href="style.css">
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inika:wght@400;700&family=Inter:wght@400;700&family=Noto+Sans+Georgian:wght@400;700&display=swap">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Georgian&display=swap" rel="stylesheet">
 </head>
 <body>
 	<header class="header">
@@ -29,7 +31,7 @@
 	<main class="main">
 		<section class="make-friend">
 			<div class="friend-container">
-				<h2>Not only people need a house</h2>
+				<h2>Not only people <br> need a house</h2>
 				<p>We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!</p>
 				<div class="friend-btn"><a href="#" style="color: #292929;">Make a friend</a></div>
 			</div>
@@ -48,6 +50,46 @@
 				<p>We feed our wards with the best food and make sure that they do not get sick, feel comfortable (including psychologically) and well. We are supported by 87 volunteers and 28 employees of various skill levels. About 12% of the animals are taken by the shelter staff. Taking care of the animals, they become attached to the pets and would hardly ever leave them alone.</p>
 			</div>
 		</section>
+
+		<section class="our-friends">
+			<div class="our-friends__header"><h3>Our friends who <br>
+				are looking for a house</h3></div>
+
+			<div class="our-friends__wrapper">
+
+				<div class="pet-last"><img src="images/adds/arrow-back.svg" alt="arrow-back"></div>
+
+				<div class="pet-box">
+
+					<div class="pet-box-item">
+						<div class="pet" style="background-image: url(images/pets-katrine.png);"></div>
+						<p class="pet__name">Katrine</p>
+						<div class="pet-btn"><a href="#">Learn more</a></div>
+					</div>
+
+					<div class="pet-box-item">
+						<div class="pet" style="background-image: url(images/pets-jennifer.png);"></div>
+						<p class="pet__name">Jennifer</p>
+						<div class="pet-btn"><a href="#">Learn more</a></div>
+					</div>
+
+					<div class="pet-box-item">
+						<div class="pet" style="background-image: url(images/pets-woody.png);"></div>
+						<p class="pet__name">Woody</p>
+						<div class="pet-btn"><a href="#">Learn more</a></div>
+					</div>
+				</div>
+				
+				<div class="pet-next"><img src="images/adds/arrow-fwd.svg" alt="arrow-fwd"></div>
+
+			</div>
+
+			<div class="our-friends__btn">
+				<a href="#">Get to know the rest</a>
+			</div>
+
+		</section>
+
 	</main>
 
 
